[tool.poetry]
name = 'arcadia_bot'
version = '0.1.0'
description = 'Chat bot created to bridge information flow between the Arcadia project and the Wh00t messaging app'
authors = ['roboto84 <7658704+roboto84@users.noreply.github.com>']

[tool.poetry.dependencies]
python = '^3.10'
python-dotenv = '^0.15.0'
wh00t-core = {git = 'https://github.com/roboto84/wh00t_core.git', tag = 'v0.4.4'}
arcadia = {git = 'https://github.com/roboto84/arcadia.git', rev = 'e7fb68e'}

[tool.poetry.dev-dependencies]
pytest = '^6.2.5'

[build-system]
requires = ['poetry-core>=1.0.0']
build-backend = 'poetry.core.masonry.api'
