[tool.poetry]
name = 'arcadia_bot'
version = '0.1.0'
description = 'Chat bot created to bridge information flow between the Arcadia project and the Wh00t messaging app'
authors = ['roboto84 <7658704+roboto84@users.noreply.github.com>']

[tool.poetry.dependencies]
python = '^3.10'
python-dotenv = '^1.0.0'
validators = '^0.20.0'
wh00t-core = {git = 'https://github.com/roboto84/wh00t_core.git', tag = 'v0.5.2'}
arcadia = {git = 'https://github.com/roboto84/arcadia.git', tag = 'v0.2.4'}

[tool.poetry.dev-dependencies]
pytest = '^7.2.0'

[build-system]
requires = ['poetry-core>=1.0.0']
build-backend = 'poetry.core.masonry.api'
